<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ExampleFragment"
    android:background="@color/colorAccent"
    android:orientation="horizontal">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/fragment_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:text="@string/question_article"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id= "@+id/radio_button_yes"
            android:layout_marginRight="8dp"
            android:text="@string/yes"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id= "@+id/radio_button_no"
            android:layout_marginRight="8dp"
            android:text="@string/no"></RadioButton>
    </RadioGroup>

</LinearLayout>